# dictaphone4linux

./: .gitmodules  CMakeLists.txt  Doxyfile  annotated.html  classConfig-members.html  classConfig.html  classConfigController-members.html  classConfigController.html  classConfigController__coll__graph.md5  classConfigController__inherit__graph.map  classDaemon-members.html  classDaemon.html  classDeviceController-members.html  classDeviceController.html  classDeviceController__inherit__graph.map  classDeviceController__inherit__graph.md5  classKeeper-members.html  classKeeper.html  classKeeper__inherit__graph.map  classKeeper__inherit__graph.md5  classLockFile-members.html  classLockFile.html  classLoger-members.html  classLoger.html  classMixer-members.html  classMixer.html  classMixer__coll__graph.map  classMixer__coll__graph.md5  classSoundSaveController-members.html  classSoundSaveController.html  classSoundSaveController__coll__graph.map  classSoundSaveController__inherit__graph.md5  classes.html  classiChain-members.html  classiChain.html  classiChain__inherit__graph.map  classiChain__inherit__graph.md5  common_8h.html  common_8h__dep__incl.map  common_8h__dep__incl.md5  (+226 more)
.github/workflows/: doxygen.yml  release.yml  test.yml
deb/: postinst.in
dictaphone-cli/: CMakeLists.txt  main.cpp
dictaphone-cli/include/: daemon_command.h  ui.h
dictaphone-cli/src/: daemon_command.cpp  ui.cpp
dictaphone-common/: CMakeLists.txt
dictaphone-common/include/: config.h  const.h.in  portaudio_device.h  pulseaudio_device.h  records.h
dictaphone-common/src/: config.cpp  portaudio_device.cpp  pulseaudio_device.cpp  records.cpp
dictaphone-core/: CMakeLists.txt  main.cpp
dictaphone-core/include/: common.h  config_handler.h  controllers.h  daemon.h  device_handler.h  mixer.h
dictaphone-core/include/controllers/: config.h  device.h  icontroller.h  sound.h
dictaphone-core/src/: config_handler.cpp  controllers.cpp  daemon.cpp  device_handler.cpp  mixer.cpp
dictaphone-core/src/controllers/: config.cpp  device.cpp  sound.cpp
list_tests/: test.cpp
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  (+35 more)
